feat: add car route management
